tsk-30: Update password (#33)
Closes #30

Reviewed-on: https://git.kundeng.us/phoenix/textsender-auth/pulls/33
Co-committed-by: phoenix <kundeng00@pm.me>
